デザイン作品追加&サムネクリックで拡大

--- a/index.html
+++ b/index.html
@@ -102,6 +102,14 @@
                 <div class="works-grid">
                     <article class="work-card">
                         <div class="work-image">
+                            <img src="images/natural-vintage.png" alt="Natural Vintage Logo" loading="lazy">
+                        </div>
+                        <div class="work-info">
+                            <h3 class="work-title">Natural Vintage Logo</h3>
+                            <p class="work-category">Graphic Design</p>
+                    </article>
+                    <article class="work-card">
+                        <div class="work-image">
                             <img src="images/main-visual.png" alt="クレシア伝説" loading="lazy">
                         </div>
                         <div class="work-info">
@@ -176,6 +184,10 @@
             <p>&copy; 2026 Portfolio. All Rights Reserved.</p>
         </div>
     </footer>
+    <div id="lightbox" class="lightbox">
+        <span class="lightbox-close">&times;</span>
+        <img class="lightbox-content" id="lightbox-img">
+    </div>
 </body>
 
 </html>
