実務案件詳細に画像追加

--- a/casestudy-aviation.html
+++ b/casestudy-aviation.html
@@ -179,23 +179,52 @@
 
                         <section class="case-section">
                             <h2>Core Support</h2>
-                            <div style="margin-top: 30px;">
-                                <h3>01. レスポンシブ化の完遂</h3>
-                                <p>
-                                    既存のデスクトップ向けレイアウトを維持しつつ、スマートフォンやタブレットからの視認性を最適化しました。ITエンジニアが現場などの外出先からでも情報をキャッチできるよう、読みやすさに配慮した設計を行いました。
-                                </p>
+
+                            <!-- 01. レスポンシブ化 -->
+                            <div class="support-item" style="margin-top: 40px;">
+                                <div style="display: flex; gap: 30px; align-items: flex-start;">
+                                    <div class="support-image"
+                                        style="flex-shrink: 0; width: 150px; height: 100px; border-radius: 10px; overflow: hidden; background: var(--card-bg); border: 1px solid rgba(255,255,255,0.1);">
+                                        <img src="images/responsive.jpg" alt="Responsive Design Support"
+                                            style="width: 100%; height: 100%; object-fit: cover;">
+                                    </div>
+                                    <div>
+                                        <h3 style="margin-bottom: 10px;">01. レスポンシブ化の完遂</h3>
+                                        <p>既存のデスクトップ向けレイアウトを維持しつつ、スマートフォンやタブレットからの視認性を最適化しました。ITエンジニアが現場などの外出先からでも情報をキャッチできるよう、読みやすさに配慮した設計を行いました。
+                                        </p>
+                                    </div>
+                                </div>
                             </div>
-                            <div style="margin-top: 30px;">
-                                <h3>02. ローカル開発環境の構築支援</h3>
-                                <p>
-                                    依頼主が自ら更新・修正をテストできるよう、local等を用いたローカル開発環境のセットアップを支援。本番環境に影響を与えずに検証できるフローを構築しました。
-                                </p>
+
+                            <!-- 02. ローカル環境 -->
+                            <div class="support-item" style="margin-top: 40px;">
+                                <div style="display: flex; gap: 30px; align-items: flex-start;">
+                                    <div class="support-image"
+                                        style="flex-shrink: 0; width: 150px; height: 100px; border-radius: 10px; overflow: hidden; background: var(--card-bg); border: 1px solid rgba(255,255,255,0.1);">
+                                        <img src="images/local.png" alt="Local Development Environment Setup"
+                                            style="width: 100%; height: 100%; object-fit: cover;">
+                                    </div>
+                                    <div>
+                                        <h3 style="margin-bottom: 10px;">02. ローカル開発環境の構築</h3>
+                                        <p>Local環境をセットアップ。本番環境に影響を与えずに検証できるフローを構築しました。</p>
+                                    </div>
+                                </div>
                             </div>
-                            <div style="margin-top: 30px;">
-                                <h3>03. 運用マニュアル作成とレクチャー</h3>
-                                <p>
-                                    「技術を渡して終わり」ではなく、継続的な運用を可能にするためにカスタマイズされたマニュアルを作成。電話対応や面談を通じ、技術的な不明点を解消する手厚い導入サポートを提供しました。
-                                </p>
+
+                            <!-- 03. マニュアル -->
+                            <div class="support-item" style="margin-top: 40px;">
+                                <div style="display: flex; gap: 30px; align-items: flex-start;">
+                                    <div class="support-image"
+                                        style="flex-shrink: 0; width: 150px; height: 100px; border-radius: 10px; overflow: hidden; background: var(--card-bg); border: 1px solid rgba(255,255,255,0.1);">
+                                        <img src="images/manual.png" alt="Operation Manual and Support"
+                                            style="width: 100%; height: 100%; object-fit: cover;">
+                                    </div>
+                                    <div>
+                                        <h3 style="margin-bottom: 10px;">03. 運用マニュアル作成とレクチャー</h3>
+                                        <p>「技術を渡して終わり」ではなく、継続的な運用を可能にするためにカスタマイズされたマニュアルを作成。電話対応や面談を通じ、技術的な不明点を解消する手厚い導入サポートを提供しました。
+                                        </p>
+                                    </div>
+                                </div>
                             </div>
                         </section>
                     </div>
