aboutと実務案件詳細ページ追記

--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
                         ユーザー体験（UX）を最優先に考え、美しさと使いやすさを両立させたデザインを追求しています。
                         最新のトレンドと技術を取り入れ、常に進化し続けるクリエイティブを提供します。
                     </p>
+                    <p style="margin-top: 15px;">
+                        また、Antigravity等のAIエージェントを駆使した「Vibe
+                        Coding」を開発スタイルとして確立しています。単なるコードの貼り付けではなく、プロジェクト全体の文脈や蓄積されたノウハウをAIと同期し、対話を通じてロジックを磨き上げることで、迅速かつ精度の高い実装を実現しています。
+                    </p>
                     <div class="profile-info">
                         <div class="info-item">
                             <span class="label">Location</span>
@@ -91,6 +95,8 @@
                         <span class="skill-tag">WordPress</span>
                         <span class="skill-tag">Photoshop</span>
                         <span class="skill-tag">Illustrator</span>
+                        <span class="skill-tag">Git/GitHub</span>
+                        <span class="skill-tag">Antigravity</span>
                     </div>
                 </div>
             </div>
@@ -106,8 +112,8 @@
                 <div class="works-grid" style="margin-bottom: 60px;">
                     <article class="work-card">
                         <a href="casestudy-aviation.html" class="work-card-link">
-                            <div class="work-image gradient-1">
-                                <span class="confidential-tag">Technical Support</span>
+                            <div class="work-image">
+                                <img src="images/image.png" alt="IT企業 公式サイト 技術支援プロジェクト" loading="lazy">
                             </div>
                             <div class="work-info">
                                 <h3 class="work-title">IT企業 公式サイト</h3>
