--- a/casestudy-aviation.html
+++ b/casestudy-aviation.html
@@ -103,19 +103,21 @@
             transform: translateX(-5px);
         }
 
-        .case-image-placeholder {
+        .case-main-image {
             width: 100%;
-            height: 400px;
-            background: linear-gradient(135deg, #0055b8 0%, #00aaff 100%);
+            height: 450px;
             border-radius: 15px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 1.2rem;
-            font-weight: 700;
+            overflow: hidden;
             margin-bottom: 60px;
-            color: #fff;
-            text-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        .case-main-image img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: block;
         }
 
         @media (max-width: 768px) {
@@ -125,6 +127,10 @@
 
             .case-grid {
                 grid-template-columns: 1fr;
+            }
+
+            .case-main-image {
+                height: 300px;
             }
         }
     </style>
@@ -161,8 +167,8 @@
 
         <section class="section">
             <div class="container">
-                <div class="case-image-placeholder">
-                    Technical Support & Maintenance
+                <div class="case-main-image">
+                    <img src="images/image.png" alt="IT企業 公式サイト 技術支援プロジェクト メインビジュアル">
                 </div>
 
                 <div class="case-grid">
@@ -233,6 +239,14 @@
                         <div class="sidebar-item">
                             <h3>Role</h3>
                             <p>Maintenance Support / Developer</p>
+                        </div>
+                        <div class="sidebar-item">
+                            <h3>Team</h3>
+                            <p>営業 1名 / エンジニア 1名（自分）</p>
+                        </div>
+                        <div class="sidebar-item">
+                            <h3>Duration</h3>
+                            <p>1 Week</p>
                         </div>
                         <div class="sidebar-item">
                             <h3>Tech Stack</h3>
