--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <section id="about" class="about section">
             <div class="container about-container">
                 <div class="about-image">
-                    <img src="images/resume.png" alt="Profile Photo" loading="lazy">
+                    <img src="images/tennis.png" alt="Profile Photo" loading="lazy">
                 </div>
                 <div class="about-text">
                     <h2 class="section-title">About Me</h2>
