--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                         <a href="#" class="social-link">Instagram</a>
                     </div>
                 </div>
-                <form class="contact-form">
+                <form class="contact-form" id="contact-form">
                     <div class="form-group">
                         <label for="name">Name</label>
                         <input type="text" id="name" name="name" required>
@@ -222,7 +222,8 @@
                         <label for="message">Message</label>
                         <textarea id="message" name="message" rows="5" required></textarea>
                     </div>
-                    <button type="submit" class="btn btn-primary">Send Message</button>
+                    <button type="submit" class="btn btn-primary" id="submit-btn">Send Message</button>
+                    <div id="form-status" class="form-status"></div>
                 </form>
             </div>
         </section>
