feat: add privacy policy agreement to contact form

--- a/index.html
+++ b/index.html
@@ -222,6 +222,13 @@
                         <label for="message">Message</label>
                         <textarea id="message" name="message" rows="5" required></textarea>
                     </div>
+                    <div class="form-group privacy-policy">
+                        <label class="checkbox-container">
+                            <input type="checkbox" id="privacy-check" required>
+                            <span class="checkmark"></span>
+                            <span class="label-text"><a href="#" class="policy-link">プライバシーポリシー</a>に同意する</span>
+                        </label>
+                    </div>
                     <button type="submit" class="btn btn-primary" id="submit-btn">Send Message</button>
                     <div id="form-status" class="form-status"></div>
                 </form>
