--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                             <input type="checkbox" id="privacy-check" required>
                             <span class="checkmark"></span>
                             <span class="label-text"><a href="privacy-policy.html"
-                                    class="policy-link">プライバシーポリシー</a>に同意する！</span>
+                                    class="policy-link">プライバシーポリシー</a>に同意する</span>
                         </label>
                     </div>
                     <button type="submit" class="btn btn-primary" id="submit-btn">Send Message</button>
